--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,5 +56,34 @@
   }
   &__lists {
     list-style-type: none;
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: repeat(5, 1fr);
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+    .nav__list--1 {
+      grid-area: 1 / 1 / 2 / 2;
+    }
+    .nav__list--2 {
+      grid-area: 1 / 2 / 2 / 3;
+    }
+    .nav__list--3 {
+      grid-area: 1 / 3 / 2 / 4;
+    }
+    .nav__list--4 {
+      grid-area: 3 / 1 / 4 / 2;
+    }
+    .nav__list--5 {
+      grid-area: 3 / 2 / 4 / 3;
+    }
+    .nav__list--6 {
+      grid-area: 3 / 3 / 4 / 4;
+    }
+    .nav__list--7 {
+      grid-area: 2 / 1 / 3 / 4;
+    }
+    .nav__gallery {
+      display: flex;
+    }
   }
 }
